CRUD e relações finalizados